2014-12-03 Gregory L. Lee <lee218@llnl.gov>
	* : added irpc action
	* : renamed writeVariable to writeModuleVariable
	* frontend.cpp : specify TotalView path via DYSECTAPI_TOTALVIEW_PATH
	* StrAgg.C : fixed deserialize of counts

2014-12-02 Gregory L. Lee <lee218@llnl.gov>
	* dysect* : added LoadLibrary, WriteVariable, and Signal actions
	* event.cpp, Event.h : fixed Time probe (false warning and incorrect comparison in wasTriggered)

2014-10-17 Gregory L. Lee <lee218@llnl.gov>
	* dysect* : added Totalview and DepositCore actions

2014-10-17 Gregory L. Lee <lee218@llnl.gov>
	* scripts/* : added full-core-file merging script

2014-08-18 Gregory L. Lee <lee218@llnl.gov>
	* dysect* : modified logging to use macros with optional line info

2014-08-15 Gregory L. Lee <lee218@llnl.gov>
	* LocationBE.C : use getInitialFrame instead of walking full stack

2014-08-11 Nicklas Jensen <nboa@dtu.dk>
	* : added Event composition

2014-07-15 Gregory L. Lee <lee218@llnl.gov>
	* backend.cpp : only wait for attached processes, not full domain

2014-07-10 Gregory L. Lee <lee218@llnl.gov>
	* SafeTimer.h, safe_timer.cpp : added resetSyncTimer function
	* backend.cpp : reset timer when all target procs satisfy a probe condition to trigger action immediately

2014-07-08 Gregory L. Lee <lee218@llnl.gov>
	* frontend.cpp : check for EINTR on select failure
	* frontend.cpp, default_probes.cpp : modified handling of process exit

2014-06-26 Gregory L. Lee <lee218@llnl.gov>
	* probe.cpp : initialize processCount to zero for all Probe constructors
	* backend.cpp : disable fireonce timed probes after handling
	* backend.cpp : no need to operate on relayed packet
	* STAT_BackEnd.C : look for MRNet messages before handling Dysect operations

2014-06-25 Gregory L. Lee <lee218@llnl.gov>
	* frontend.cpp : remove errant printf!
	* safe_timer.cpp : avoid overlapping probes in probesTimeoutMap with same timeout
	* : code cleanup
	* backend.cpp : send enqueued notifications when handling action
